objects/Legacy_Case_Note__x.object
<CustomObject>
    <fields>
        <fullName>Created_By__c</fullName>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <externalDeveloperName>CREATED</externalDeveloperName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAST_UPD__c</fullName>
        <externalDeveloperName>LAST_UPD</externalDeveloperName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NOTE_ID__c</fullName>
        <externalDeveloperName>NOTE_ID</externalDeveloperName>
        <label>Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTE__c</fullName>
        <externalDeveloperName>NOTE</externalDeveloperName>
        <label>NOTE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <externalDeveloperName>NOTE_TYPE</externalDeveloperName>
        <label>Note Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRC_ROW_ID__c</fullName>
        <description>SRC_ROW_ID</description>
        <externalDeveloperName>SRC_ROW_ID</externalDeveloperName>
        <label>SRC_ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_ID__c</fullName>
        <description>SR_ID</description>
        <externalDeveloperName>SR_ID</externalDeveloperName>
        <label>SR_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_NUM__c</fullName>
        <externalDeveloperName>SR_NUM</externalDeveloperName>
        <label>Case Number</label>
        <length>15</length>
        <referenceTo>Legacy_Case__x</referenceTo>
        <relationshipLabel>Legacy Case Notes</relationshipLabel>
        <relationshipName>Legacy_Case_Notes</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Id</columns>
        <columns>ExternalId</columns>
        <columns>Note_Type__c</columns>
        <columns>NOTE_ID__c</columns>
        <columns>Created__c</columns>
        <columns>NOTE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NOTE_ID__c</field>
            <operation>equals</operation>
            <value>QAL-51JY0ON</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>